MVP + animation and fixe nav stretch

--- a/css/index.css
+++ b/css/index.css
@@ -185,6 +185,8 @@ p {
   background-color: #f6f6f6;
   color: #454a59;
   border-bottom: 1px solid #f1f1f1;
+  position: fixed;
+  opacity: 0.9;
 }
 .banner .banner-container {
   max-width: 800px;
@@ -231,6 +233,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  padding-top: 9.5%;
 }
 .home .intro h2 {
   padding: 15px;
