--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,7 @@
 
 .home {
   .intro {
+    padding-top: 9.5%;
     h2 {
       padding: 15px;
     }
