--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,8 @@
   background-color: @nav-bg;
   color: @nav-font;
   border-bottom: 1px solid @nav-border;
+  position: fixed;
+  opacity: .9;
 
   .banner-container {
     .container-limit ();
